# hackathon-tabteam

./: .env  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py  streamlit_app.py  test_nasa.py
app/api/: api.py  main.py
app/api/satelite/: get_satelite_img.py
app/api/weather/: api.py
