[tool.poetry]
name = "test-weather-api"
version = "0.1.0"
description = "src to testing ideas"
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
geopy = "^2.4.1"
mkdocs = "^1.6.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
